Fix: Home page spark video on small screens

--- a/src/v1.1/pages/Home/Economy/economy.sass
+++ b/src/v1.1/pages/Home/Economy/economy.sass
@@ -195,6 +195,7 @@
 
 +render-to($media-xxs)
   .HomeEconomy
+    overflow: visible
     &__aside4
       grid-column: 1/span 5
       grid-row: 2
@@ -209,6 +210,9 @@
       background-color: $white
       position: relative
       z-index: 1
+      margin-bottom: -60px
+      padding-bottom: 60px
+      +shadow-deep()
     &__video1
       display: block
       grid-column: 6/span 1
@@ -224,7 +228,7 @@
       grid-column: 6/span 1
       grid-row: 4
       height: 100%
-      transform: translate(0, -60px)
+      transform: translate(0, 0)
       z-index: 0
       &::after
         content: ''
@@ -259,10 +263,6 @@
       grid-column: 1/span 6
       margin-right: $hspace-xxxs
       z-index: 1
-      .TextPanel
-        +shadow-deep()
     &__video3
       width: $hspace-xxxs
-      justify-self: end
-      transform: translate(0, -60px)
       position: relative
